--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,6 @@
     display: block;
     margin: 5px 5px 5px 5px;
     color: #e6e6e6;
-    text-decoration: none;
-}
-
-.item-footer:hover{
-    color: #e6e6e6;
-    font-size: 15px;
     text-decoration: underline;
 }
 
@@ -87,4 +81,18 @@
     font-size: 25px;
     color: #ffffff;
     margin: 6px 6px 6px 6px;
+}
+
+.qntd-carrinho{
+    width: 40px;
+}
+
+.preco-carrinho{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#botao-carrinho{
+    text-decoration: none;
+    color: #ffffff;
 }
